sail (4.0.1-16) UNRELEASED; urgency=low
  * tagged as 4.0.1-15
  - fixed device deletion bug in the db updater
 -- CoCoSoft <admin@aelintra.com>  Mon, 18 Aug 2014 18:00:00 +0000

sail (4.0.1-15) UNRELEASED; urgency=low
  * tagged as 4.0.1-15
  - fixed sequence bug in the db updater (srkV4reloader.sh)
 -- CoCoSoft <admin@aelintra.com>  Sun, 17 Aug 2014 18:00:00 +0000

sail (4.0.1-14) UNRELEASED; urgency=low
  * tagged as 4.0.1-14
  - dropped commit sha logging in favour of tags
  - fix timezone bug in yealink.common
  - add ldapbase generation to provisioning
 -- CoCoSoft <admin@aelintra.com>  Sat, 16 Aug 2014 18:00:00 +0000

sail (4.0.1-13) UNRELEASED; urgency=low
  * git commit 9ed9a91a06a63b4af7cdc526366949d227648489
  - add initial user and cluster rows to initdata.sql
 -- CoCoSoft <admin@aelintra.com>  Thu, 14 Aug 2014 18:00:00 +0000

sail (4.0.1-12) UNRELEASED; urgency=low
  * svn commit 2243
  - Clean up sarkddi/view.php
  - fix bug in stop/start routine (Globals)
  - add network reboot message to network/view.php
  - fix code error in srkHelper
  - responder created devices default to Always for creds
  - setip.pl cleaned up for SME
 -- CoCoSoft <admin@aelintra.com>  Fri, 6 Jun 2014 18:00:00 +0000

sail (4.0.1-11) UNRELEASED; urgency=low
  * svn commit 2237
  - Change to sarkPCI/view for new jquery-ui release
  - moved user table from system to customer data in dumper array
  - added always file to handle admin privileges in the event of damage
  - updated ldap to handle forename/surname change
  - updated devices and added new table device_aql to tag ATL owned devices
  - cleaned up asterisk device definitions and in extensions and responder
  - added slow-attack rule to F2B
 -- CoCoSoft <admin@aelintra.com>  Thu, 22 May 2014 18:00:00 +0000

sail (4.0.1-10) UNRELEASED; urgency=low
  * svn commit 2231
  - updated globals to handle ldap authentication
  - updated navigation to handle the directory
  - fixed recording overrun bug in S200