@@ -988,3 +988,14 @@ dh_gencontrol
 dh_md5sums
 dh_builddeb
 dh_builddeb
+dh_prep
+dh_installdirs
+dh_installdocs
+dh_installchangelogs
+dh_compress
+dh_makeshlibs
+dh_installdeb
+dh_gencontrol
+dh_md5sums
+dh_builddeb
+dh_builddeb
