@@ -2,7 +2,7 @@ Package: sail
 Version: 4.0.1-16
 Architecture: all
 Maintainer: CoCo <admin@aelintra.com>
-Installed-Size: 19144
+Installed-Size: 19145
 Depends: sailhpe, asterisk, asterisk-dahdi, asterisk-mp3, dahdi, apache2, sqlite3, php5-sqlite, php-pear, libio-socket-multicast-perl, libapache2-mod-php5, libdbi-perl, libdbd-sqlite3-perl, runit, sox, mysql-server, asterisk-mysql, php5-mysql, nmap, zip, ntp, php-net-ipv4, libfile-readbackwards-perl, shorewall, fail2ban, sudo, dos2unix, dnsmasq, tshark, vim, debian-archive-keyring, less, hostname
 Section: network
 Priority: extra
