@@ -8,7 +8,6 @@
 [general]
 context=mainmenu
 vmexten=*50*
-maxexpirey=180
 defaultexpirey=160
 limitonpeers=yes
 callcounter=yes
