@@ -1,6 +1,7 @@
 sail (4.0.1-16) UNRELEASED; urgency=low
   * tagged as 4.0.1-15
   - fixed device deletion bug in the db updater
+  - added new deleter for old 3.x/4.x devices
  -- CoCoSoft <admin@aelintra.com>  Mon, 18 Aug 2014 18:00:00 +0000
 
 sail (4.0.1-15) UNRELEASED; urgency=low
